# bmstu-cg

./: .gitignore  README.md
lab01/: lab01.py
lab02/: lab02.py
lab03/: dialog.cpp  dialog.ui  lab03.pro  ladder.cpp  ladder.h  ladder.ui  line.cpp  line.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab04/: canonical.cpp  circle.cpp  dialog.h  draw4points.cpp  draw4points.h  ellipse.cpp  ellipse.h  lab04.pro  lab04.pro.user.5b6f4cc  lab04.pro.user.6f23ce3  lab04.pro.user.76308f3  lab04.pro.user.8d021a9  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab04vscode/: CMakeLists.txt
lab04vscode/include/: circle.h
lab04vscode/src/: dialog.cpp  mainwindow.cpp
lab05/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab06/: mainwindow.ui
lab07/: mainwindow.cpp  mainwindow.ui
lab08/: mainwindow.cpp  mainwindow.ui
lab09/: mainwindow.cpp  mainwindow.ui
